# cpp-project-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-and-run-cov-clang.sh  build-and-run-cov-gcc.sh  build-and-run-cov.sh  codecov.yml
.github/workflows/: main.yml
src/: CMakeLists.txt  library.cpp  library.h
tests/: CMakeLists.txt  run_tests.cpp  test_library.h
